--- a/css/responsive.css
+++ b/css/responsive.css
@@ -454,31 +454,33 @@
     width: 100%;
     height: 30%;
     padding: 0px 10px;
+    border: none;
 }
 #contact h1{
-    font-size: 6vw;
+    font-size: 7vw;
 }
 .address .data{
-    padding: 2px 30px;
+    padding: 10px 30px;
 }
 .address h3{
     font-size: 3vw;
 }
 .address p{
     margin-top: 0px;
-    margin-bottom: 5px;
-    font-size: 3vw;
+    margin-bottom: 10px;
+    font-size: 4vw;
 }
 .top-categories{
     width: 100%;
     height: 30%;
-    padding: 0px 10px;
+    padding: 3px 30px;
     text-align: right;
+    border: none;
 }
 .top-categories .link{
     align-items: flex-end;
-    gap: 2px;
-    padding: 5px 10px;
+    gap: 5px;
+    padding: 10px 30px;
 }
 .top-categories .link a{
     font-size: 4vw;
@@ -487,7 +489,8 @@
 .feedback{
     width: 100%;
     height: 40%;
-    padding: 0 10px;
+    padding: 0 20px;
+    border: none;
 }
 
 .feedback .input h4:nth-child(2){
@@ -495,11 +498,11 @@
 }
 .feedback .input{
     margin-top: 0px;
-    padding: 10px 30px;
+    padding: 10px 20px;
     gap: 10px;
 }
 .feedback .sendbtn{
-    padding: 0px 50px 0 0 ;    
+    padding: 0px 40px 0 0 ;    
 }
 .feedback #send{
     padding: 5px 15px;
