--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
     margin: 0%;
     padding: 0%;
     box-sizing: border-box;
-    user-select: none;
+    /* user-select: none; */
 }
 html,body{
     width: 100%;
@@ -68,7 +68,7 @@ body.dark{
     z-index: 99999;
     overflow: hidden;
     flex-direction: column;
-    gap: 20px;
+    gap: 50px;
     padding-top: 150px;
 }
 #loader .photo-loader{
@@ -76,10 +76,10 @@ body.dark{
 }
 #loader .photo-loader h2{
     color: white;
-    font-size: 3vw;
+    font-size: 1.5vw;
 }
 #loader .photo-loader img{
-    width: 400px;
+    width: 200px;
     filter: invert(100%);
 }
 
@@ -114,44 +114,7 @@ body.dark{
     line-height: 1;
     color: whitesmoke;
 }
-#loader .photo-loader{
-    animation: loaderRotate  infinite cubic-bezier(0.19, 1, 0.22, 1) 3s;
-}
-@keyframes loaderRotate {
-    0%{
-        transform: rotate3d(0, 1, 0, 36deg);
-    }
-    10%{
-        transform: rotate3d(0, 1, 0, 72deg);
-    }
-    20%{
-        transform: rotate3d(0, 1, 0, 108deg);
-    }
-    30%{
-        transform: rotate3d(0, 1, 0, 144deg);
-    }
-    40%{
-        transform: rotate3d(0, 1, 0, 180deg);
-    }
-    50%{
-        transform: rotate3d(0, 1, 0, 216deg);
-    }
-    60%{
-        transform: rotate3d(0, 1, 0, 252deg);
-    }
-    70%{
-        transform: rotate3d(0, 1, 0, 288deg);
-    }
-    80%{
-        transform: rotate3d(0, 1, 0, 300deg);
-    }
-    90%{
-        transform: rotate3d(0, 1, 0, 340deg);
-    }
-    100%{
-        transform: rotate3d(0, 1, 0, 360deg);
-    }
-}
+
 
 
 /* ======================================================================================================= */
