--- a/css/style.css
+++ b/css/style.css
@@ -187,7 +187,7 @@ body.dark{
 
 .navbar .logo a{
     color:#000 ;
-    font-size: 35px;
+    font-size: 35                                                                                                                                                                                                                           px;
     font-weight: 600;
     transition: all 0.3s ease;
 }
@@ -215,9 +215,9 @@ body.dark{
 }
 .navbar .menu li a{
     display: block;
-    font-size: 18px;
+    font-size: 13px;
     font-weight: 900;
-    margin-left: 25px;
+    margin-left: 20px;
     transition: color 0.3s ease;
 }
 .navbar.sticky .nav_link{
@@ -261,8 +261,8 @@ body.dark{
     position: absolute;
     top: -10px;
     right: -10px;
-    width: 25px;
-    height: 25px;
+    width: 20px;
+    height: 20px;
     border-radius: 50%;
     background-color: var(--bg-box-color);
     color: var(--a-text-color);
@@ -768,42 +768,33 @@ button:hover::before {
 /* =============================================================================================================== */
 /* For data1 */
 #data1{
-    /* background-color: springgreen; */
-    padding: 30px 10px;
-    position: relative;
-    display: flex;
+    /* background-color: rgb(255, 47, 0); */
     flex-direction: column;
-    align-items: center;
 }
-#data1 .text{
-    overflow: hidden;
-    width: 90%;
-    height:50%;
-    background-color: rgba(99, 99, 99, 0.2);
-    backdrop-filter: blur(20px);
-    box-shadow: 7px 7px 20px #929292    ;
-    padding: 50px 40px;
-    flex-direction: column;
-    justify-content: flex-start;
-    gap: 15px;
-    text-align: justify;
-    border-radius: 10px;
-    margin-bottom: 50px;
-}
-#data1 .text h1{
-    font-size: 2.2vw;
-    text-transform: capitalize;
-    margin-bottom: 30px;
+#data1 .heading{
+    width: 100%;
+    height: 15%;
     text-align: center;
+    /* background-color: pink; */
 }
-#data1 .text h3{
-    font-size: 1.35vw;
-    font-weight: 100;
-    opacity: .8;
-    width: 80%;
-    /* margin-bottom: -10px; */
+#data1 h1{
+    font-size: 4vw;
 }
-
+#data1 .artisans-photo{
+    width: 100%;
+    height: 80%;
+    /* background-color: springgreen; */
+}
+#data1 .artisans-photo .swiper-wrapper{
+    width: 100%;
+    height: 90%;
+}
+#data1 .artisans-photo .swiper-wrapper img{
+    width: 100%;
+    height: 100%;
+    border-radius: 0;
+    object-fit: cover;
+}
 
 
 
@@ -1140,6 +1131,16 @@ img{
 /* For contacts */
 #contact{
     flex-direction: column;
+    background-image: url(https://images.unsplash.com/photo-1625844225439-aad9a72213ae?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
+    background-size: cover;
+    position: relative;
+}
+.contact-overlay{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(128, 128, 128, 0.66);
+    position: absolute;
+    top: 0;
 }
 #contact .top{
     width: 100%;
@@ -1151,7 +1152,7 @@ img{
 #contact .contact-box{
     width: 100%;
     height: 70%;
-    background-color: rgb(232, 232, 232);
+    /* background-color: rgb(232, 232, 232); */
 }
 .address{
     width: 30%;
