--- a/css/style.css
+++ b/css/style.css
@@ -256,21 +256,16 @@ body.dark{
     padding: 3px 5px;
     position: relative;
 }
-.cart::after{
-    content: attr(data-content);
+.cart span{
+    font-size: 1.1vw;
+    background-color: tomato;
+    padding: 5px 10px;
+    border-radius: 50%;
     position: absolute;
     top: -10px;
-    right: -10px;
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    background-color: var(--bg-box-color);
-    color: var(--a-text-color);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 1vw;
+    color: white;
 }
+
 
 /* ================================================================================ */
 /* ================================================================================ */
@@ -992,6 +987,20 @@ img{
     display: inline-block;
     font-size: 1vw;
 }
+.product-buy-btn .buybtn{
+    padding: 15px 20px;
+    background-color: rgb(48, 48, 48);
+    color: white;
+}
+.product-buy-btn button::before {
+    content: "";
+    background: transparent;
+    width: 120%;
+    left: -10%;
+    transform: skew(30deg);
+    transition: transform 0.4s cubic-bezier(0.3, 1, 0.8, 1);
+}
+   
 
 
 /* ============================================================================================================================= */
